--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,24 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+          cache-dependency-path: ./pnpm-lock.yaml
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8 # Or your exact version like 8.15.5
+
       - name: Install, build, and upload your site output
         uses: withastro/action@v4
         with:
-            path: . # The root location of your Astro project inside the repository. (optional)
-            node-version: 22 # The specific version of Node that should be used to build your site. Defaults to 22. (optional)
-            package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
+          node-version: 20
+          package-manager: pnpm@8 # Match the version you set above
 
   deploy:
     needs: build
