--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,27 +17,26 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout your repository using git
+      - name: Checkout your repository
         uses: actions/checkout@v4
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8 # Match your pnpm version
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: pnpm
-          cache-dependency-path: ./pnpm-lock.yaml
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8 # Or your exact version like 8.15.5
-
-      - name: Install, build, and upload your site output
+      - name: Install, build, and upload site
         uses: withastro/action@v4
         with:
-          node-version: 20
-          package-manager: pnpm@8 # Match the version you set above
+          package-manager: pnpm@8
+
 
   deploy:
     needs: build
